2008-05-30 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/*: Fixes for iPod stuff
	
	* www/istar/*: Just dpon't ask!
	
	* eSTAR/Observation.pm: Fixes for non-scored observation requests
	
	* eSTAR/UA/Handler.pm: Fixed all_telescopes() so it doesn't score.
	
2008-05-28 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_bridge.pl: Bridges event messages from a vanilla TCP 
	  server to eSTAR-like SOAP server.
	
2008-05-27 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch_v2.pl: Fixed.

	* startup/cron/ogle_fetch: Script for cron'd running

2008-05-23 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/ogle_fetch_v2.pl: Updated for new PLOP

        * www/robonet-1.0/*: Added Colin Snodgrass

2008-05-16 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Big update, working ongoing.

        * www/robonet-1.0/cgi-bin/graphs.cgi: Google Chart version of the
	  performance.cgi sript. Meant to be consumed by the istar stuff.

2008-05-14 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Big update, working ongoing.

2008-05-13 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/count.cgi & single.cgi: Incremental query
	  tools into the Microlensing UA backend.
	  
2008-04-29 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_servers.pl & bin/test_servers_gsm.pl: Added Brad as a contact
	  for UKIRT and changed pinging for www.estar.org.uk to poll webserver
	  
2008-04-09 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/JACH/Handler.pm: Changed offset from -795 to -720 arcsec

2008-04-05 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Used WWW::Shorten to encode event URLs for
	  sending to twitter.com

	* eSTAR/Broker/Handler.pm: Ditto.

2008-04-05 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Added twittering
	
	* eSTAR/Broker/Handler.pm: Added twittering
	
	* bin/test_servers_gsm.pl: Bug fix eSTAR::GSM->send_sms() should be
	  a class call eSTAR::GSM::send_sms().
	  