@@ -64,17 +64,19 @@ li img {
   color: inherit;
 }
 
-.row > p > input {
-  display: inline;
-  margin: 6px 20px 6px 6px;
-  text-align: left;
-  text-decoration: inherit;
-  color: inherit;
-}
+select {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  width: 100%;
+  margin: 15px 0 0 0;
+  padding: 6px 6px 6px 144px;
+  font-size: 16px;
+  font-weight: normal;
+}  
 
 .row > select {
   display: inline;
-  margin: 6px 20px 6px 6px;
+  margin: 6px 10px 6px 6px;
   text-align: left;
   width: 140px;
   box-sizing: border-box;
@@ -82,6 +84,18 @@ li img {
   font-size: 16px;
   font-weight: normal;
 }    
+
+.altLabel {
+  position: absolute;
+  margin: 16px 16px 0 16px;
+  font-size: 14px;
+  color: grey;
+}
+
+.altInput {
+   height: 42px;
+   padding: 6px 6px 6px 100px;
+}     
 
 .serviceButton {
   display: block;
