@@ -30,8 +30,6 @@
       <li><a href="#about">About eSTAR</a></li>
     </ul>
 
-    </div>
-
     <form id="search" class="dialog" action="cgi-bin/estar/search.cgi">
         <fieldset>
             <h1>Search</h1>
